fixed spacing

--- a/src/style.css
+++ b/src/style.css
@@ -413,7 +413,7 @@ blockquote {
 		margin-top: -5vh;
 	}
 	#audio2 img {
-		width: 70%;
+		width: 90%;
 	}
 	caption {
 		width: 100%;
